--- a/frontend/src/styles/news.scss
+++ b/frontend/src/styles/news.scss
@@ -9,6 +9,7 @@
   color: white;
   text-align: center;
   background: linear-gradient(135deg, #acacacff 0%, #3b383dff 100%);
+  border-radius: 8px;
 }
 
 .hero-title {
